--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@morph-design-system/tokens",
+    "name": "@atlantum/tokens",
     "version": "0.1.0",
     "description": "tokens",
     "main": "dist/index.js",
@@ -8,5 +8,5 @@
     "license": "MIT",
     "dependencies": {},
     "devDependencies": {},
-    "repository": "https://github.com/ArthurIvanov/morph-design-system/tree/master/packages/tokens"
+    "repository": "https://github.com/ArthurIvanov/atlantum/tree/master/packages/tokens"
 }
