--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "build-storybook": "build-storybook --no-dll",
         "test": "jest",
         "test:watch": "jest --watch",
-        "update": "changeset",
+        "update": "yarn changeset",
         "release": "yarn compile && yarn changeset publish",
         "monorepo:check": "manypkg check",
         "monorepo:fix": "manypkg fix"
@@ -30,6 +30,7 @@
         "@babel/core": "^7.11.6",
         "@changesets/cli": "^2.11.2",
         "@manypkg/cli": "^0.16.1",
+        "@storybook/addon-a11y": "^6.0.28",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@types/jest": "^26.0.14",
