--- a/packages/components/checkbox/package.json
+++ b/packages/components/checkbox/package.json
@@ -7,8 +7,8 @@
     "types": "dist/index.d.ts",
     "license": "MIT",
     "dependencies": {
-        "@morph-design-system/input": "^0.0.0",
-        "@morph-design-system/theme": "^0.0.0"
+        "@atlantum/input": "^0.0.0",
+        "@atlantum/theme": "^0.0.0"
     },
     "devDependencies": {
         "react": "^16.13.1",
