--- a/packages/components/input/package.json
+++ b/packages/components/input/package.json
@@ -7,7 +7,7 @@
     "types": "dist/index.d.ts",
     "license": "MIT",
     "dependencies": {
-        "@morph-design-system/theme": "^0.0.0"
+        "@atlantum/theme": "^0.0.0"
     },
     "devDependencies": {
         "react": "^16.13.1",
@@ -16,5 +16,5 @@
     "peerDependencies": {
         "react": ">=16.8.0"
     },
-    "repository": "https://github.com/ArthurIvanov/morph-design-system/tree/master/packages/components/input"
+    "repository": "https://github.com/ArthurIvanov/atlantum/tree/master/packages/components/input"
 }
