--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -7,7 +7,7 @@
     "types": "dist/index.d.ts",
     "license": "MIT",
     "dependencies": {
-        "@morph-design-system/tokens": "^0.1.0"
+        "@atlantum/tokens": "^0.1.0"
     },
     "devDependencies": {
         "react": "^16.13.1",
