--- a/packages/components/input/package.json
+++ b/packages/components/input/package.json
@@ -7,7 +7,8 @@
     "types": "dist/index.d.ts",
     "license": "MIT",
     "dependencies": {
-        "@atlantum/theme": "^0.1.3"
+        "@atlantum/theme": "^0.1.3",
+        "@atlantum/label": "^0.1.3"
     },
     "devDependencies": {
         "react": "^16.13.1",
