--- a/packages/components/toggle/package.json
+++ b/packages/components/toggle/package.json
@@ -8,7 +8,8 @@
     "license": "MIT",
     "dependencies": {
         "@atlantum/input": "^0.1.3",
-        "@atlantum/theme": "^0.1.3"
+        "@atlantum/theme": "^0.1.3",
+        "@atlantum/label": "^0.1.3"
     },
     "devDependencies": {
         "react": "^16.13.1",
