--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
                 "packages/components/*/",
                 "packages/layout/*/",
                 "packages/theme/*",
-                "packages/tokens/*"
+                "packages/tokens/*",
+                "packages/typography/*"
             ]
         }
     },
@@ -51,6 +52,7 @@
         { "path": "packages/components/radio" },
         { "path": "packages/tokens" },
         { "path": "packages/theme" },
-        { "path": "packages/common/types" }
+        { "path": "packages/common/types" },
+        { "path": "packages/typography/heading" }
     ]
 }
