--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
         "prettier": "^2.1.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-feather": "^2.0.8",
         "react-is": "^17.0.1",
         "source-map-loader": "^1.1.0",
         "styled-components": "^5.2.0",
         "ts-loader": "^8.0.4",
-        "ts-react-feather-icons": "^1.0.0",
         "typescript": "^4.0.3"
     },
     "devDependencies": {
