fixed color scheme

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "watch": "tsc --build && tsc --watch",
         "devbuild": "webpack --mode development",
         "build": "webpack --mode production",
-        "storybook": "start-storybook -p 6006 --no-dll",
-        "build-storybook": "build-storybook --no-dll",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook",
         "test": "jest",
         "test:watch": "jest --watch",
         "update": "yarn changeset",
