--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,11 +49,14 @@
         { "path": "packages/components/main-header" },
         { "path": "packages/components/sidebar" },
         { "path": "packages/components/button" },
+        { "path": "packages/components/card" },
+        { "path": "packages/components/group" },
         { "path": "packages/components/input" },
         { "path": "packages/components/checkbox" },
         { "path": "packages/components/toggle" },
         { "path": "packages/components/label" },
         { "path": "packages/components/radio" },
+        { "path": "packages/components/select" },
         { "path": "packages/tokens" },
         { "path": "packages/theme" },
         { "path": "packages/common/types" },
