--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     },
     "dependencies": {
         "@babel/core": "^7.11.6",
+        "@changesets/cli": "^2.11.2",
+        "@manypkg/cli": "^0.16.1",
         "@storybook/addon-a11y": "^6.0.26",
         "@storybook/addon-actions": "^6.0.22",
         "@storybook/addon-essentials": "^6.0.22",
         "@storybook/addon-links": "^6.0.22",
+        "@storybook/addon-storysource": "^6.1.7",
         "@storybook/react": "^6.0.22",
-        "@changesets/cli": "^2.11.2",
-        "@manypkg/cli": "^0.16.1",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@types/jest": "^26.0.14",
