--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "packages/tokens"
     ],
     "scripts": {
-        "start": "webpack-dev-server --open",
+        "start": "npx webpack-cli serve",
         "compile": "tsc --build",
         "watch": "tsc --build && tsc --watch",
         "devbuild": "webpack --mode development",
@@ -46,6 +46,7 @@
         "@types/styled-components": "^5.1.3",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^4.6.0",
+        "@webpack-cli/serve": "^1.1.0",
         "babel-loader": "^8.1.0",
         "chromatic": "^5.2.0",
         "core-js": "^3.7.0",
@@ -55,14 +56,20 @@
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.21.5",
+        "html-webpack-plugin": "^4.5.0",
+        "mini-css-extract-plugin": "^1.3.2",
         "prettier": "^2.1.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-feather": "^2.0.8",
         "react-is": "^17.0.1",
-        "source-map-loader": "^1.1.0",
+        "source-map-loader": "^1.1.3",
         "styled-components": "^5.2.0",
-        "ts-loader": "^8.0.4",
-        "typescript": "^4.0.3"
+        "ts-loader": "^8.0.11",
+        "typescript": "^4.0.3",
+        "uglifyjs-webpack-plugin": "^2.2.0",
+        "webpack": "^5.9.0",
+        "webpack-cli": "^4.2.0",
+        "webpack-dev-server": "^3.11.0"
     }
 }
