--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "rootDir": ".",
         "module": "es6",
         "target": "es5",
-        "outDir": "lib",
+        "outDir": "dist",
         "moduleResolution": "node",
         "lib": ["dom", "es2016", "es2017.object"],
         "jsx": "react",
