--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
         "@types/styled-components": "^5.1.3",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^4.6.0",
-        "@webpack-cli/serve": "^1.1.0",
         "babel-loader": "^8.1.0",
         "chromatic": "^5.2.0",
         "core-js": "^3.7.0",
@@ -66,10 +65,6 @@
         "source-map-loader": "^1.1.3",
         "styled-components": "^5.2.0",
         "ts-loader": "^8.0.11",
-        "typescript": "^4.0.3",
-        "uglifyjs-webpack-plugin": "^2.2.0",
-        "webpack": "^5.9.0",
-        "webpack-cli": "^4.2.0",
-        "webpack-dev-server": "^3.11.0"
+        "typescript": "^4.0.3"
     }
 }
