--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
         "@storybook/addon-essentials": "^6.0.22",
         "@storybook/addon-links": "^6.0.22",
         "@storybook/addon-storysource": "^6.1.7",
+        "@storybook/addons": "^6.1.11",
         "@storybook/react": "^6.0.22",
+        "@storybook/theming": "^6.1.11",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@types/jest": "^26.0.14",
