--- a/packages/components/code/package.json
+++ b/packages/components/code/package.json
@@ -1,7 +1,20 @@
 {
-    "name": "$name$",
-    "version": "$version$",
+    "name": "@atlantum/code",
+    "version": "0.0.0",
+    "description": "code component",
+    "main": "dist/index.js",
+    "module": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "license": "MIT",
     "dependencies": {
-        $END$
-    }
+        "@atlantum/theme": "^0.1.12"
+    },
+    "devDependencies": {
+        "react": "^16.13.1",
+        "styled-components": "^5.2.0"
+    },
+    "peerDependencies": {
+        "react": ">=16.8.0"
+    },
+    "repository": "https://github.com/ArthurIvanov/atlantum/tree/master/packages/components/code"
 }
