--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@manypkg/cli": "^0.16.1",
         "@storybook/addon-a11y": "^6.0.26",
         "@storybook/addon-actions": "^6.0.22",
+        "@storybook/addon-contexts": "^5.3.21",
         "@storybook/addon-essentials": "^6.0.22",
         "@storybook/addon-links": "^6.0.22",
         "@storybook/addon-storysource": "^6.1.7",
@@ -57,7 +58,7 @@
         "html-react-parser": "^1.1.1",
         "html-webpack-plugin": "^4.5.0",
         "mini-css-extract-plugin": "^1.3.2",
-        "prettier": "^2.1.2",
+        "prettier": "^2.2.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-feather": "^2.0.8",
@@ -66,5 +67,9 @@
         "styled-components": "^5.2.0",
         "ts-loader": "^8.0.11",
         "typescript": "^4.0.3"
+    },
+    "volta": {
+        "node": "14.16.0",
+        "yarn": "1.22.10"
     }
 }
