--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "html-react-parser": "^1.1.1",
         "html-webpack-plugin": "^4.5.0",
         "loki": "^0.28.1",
+        "looks-same": "^7.3.0",
         "mini-css-extract-plugin": "^1.3.2",
         "prettier": "^2.2.1",
         "react": "^16.13.1",
@@ -72,20 +73,5 @@
     "volta": {
         "node": "14.16.0",
         "yarn": "1.22.10"
-    },
-    "loki": {
-        "configurations": {
-            "chrome.laptop": {
-                "target": "chrome.app",
-                "width": 1366,
-                "height": 768,
-                "deviceScaleFactor": 1,
-                "mobile": false
-            },
-            "chrome.iphone7": {
-                "target": "chrome.app",
-                "preset": "iPhone 7"
-            }
-        }
     }
 }
