--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^4.6.0",
         "babel-loader": "^8.1.0",
-        "chromatic": "^5.5.0",
         "core-js": "^3.7.0",
         "eslint": "^7.12.1",
         "eslint-config-prettier": "^6.15.0",
@@ -65,6 +64,7 @@
         "react-dom": "^16.13.1",
         "react-feather": "^2.0.8",
         "react-is": "^17.0.1",
+        "scripty": "^2.0.0",
         "source-map-loader": "^1.1.3",
         "styled-components": "^5.2.0",
         "ts-loader": "^8.0.11",
