--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
     "compilerOptions": {
         "baseUrl": ".",
         "rootDir": ".",
-        "module": "es6",
-        "target": "es5",
+        "module": "esNext",
+        "target": "esNext",
         "outDir": "dist",
         "moduleResolution": "node",
-        "lib": ["dom", "es2016", "es2017.object"],
+        "lib": ["dom", "es2016"],
         "jsx": "react",
         "strict": true,
         "noUnusedLocals": true,
@@ -40,8 +40,7 @@
         "lib",
         "__tests__",
         "**/*.test*",
-        "**/*.spec*",
-        "examples"
+        "**/*.spec*"
     ],
 
     "references": [
