Added comment comment TS docs to a button component

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "packages/tokens"
     ],
     "scripts": {
-        "compile": "tsc --build",
+        "dev": "yarn build --watch --preserveWatchOutput",
+        "build": "tsc --build",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
         "test": "jest",
@@ -25,6 +26,11 @@
         "monorepo:fix": "manypkg fix"
     },
     "dependencies": {
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "styled-components": "^5.2.0"
+    },
+    "devDependencies": {
         "@babel/core": "^7.11.6",
         "@changesets/cli": "^2.11.2",
         "@manypkg/cli": "^0.16.1",
@@ -43,29 +49,21 @@
         "@types/react": "^16.9.49",
         "@types/react-dom": "^16.9.8",
         "@types/styled-components": "^5.1.3",
-        "@typescript-eslint/eslint-plugin": "^4.6.0",
-        "@typescript-eslint/parser": "^4.6.0",
+        "@typescript-eslint/eslint-plugin": "^4.18.0",
+        "@typescript-eslint/parser": "^4.18.0",
         "babel-loader": "^8.1.0",
         "core-js": "^3.7.0",
-        "eslint": "^7.12.1",
-        "eslint-config-prettier": "^6.15.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.21.5",
         "html-react-parser": "^1.1.1",
         "html-webpack-plugin": "^4.5.0",
         "loki": "^0.28.1",
         "looks-same": "^7.3.0",
         "mini-css-extract-plugin": "^1.3.2",
         "prettier": "^2.2.1",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-feather": "^2.0.8",
+        "eslint": "^7.22.0",
+        "eslint-plugin-react": "^7.22.0",
         "react-is": "^17.0.1",
         "scripty": "^2.0.0",
         "source-map-loader": "^1.1.3",
-        "styled-components": "^5.2.0",
         "ts-loader": "^8.0.11",
         "typescript": "^4.0.3"
     },
