--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,11 @@
         "browser": true,
         "es2021": true
     },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
@@ -18,6 +23,18 @@
     },
     "plugins": ["react", "@typescript-eslint"],
     "rules": {
-        "prefer-const": "error"
-    }
+        "prefer-const": "error",
+        "@typescript-eslint/no-explicit-any": "error"
+    },
+    "overrides": [
+        /**
+         *  TS & TSX files
+         */
+        {
+            "files": ["packages/**/*.{js,jsx,ts,tsx}"],
+            "rules": {
+                "react/prop-types": "off"
+            }
+        }
+    ]
 }
