--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "eslint": "^7.23.0",
         "eslint-plugin-react": "^7.23.1",
         "html-react-parser": "^1.1.1",
+        "jest": "^26.6.3",
         "loki": "^0.28.1",
         "looks-same": "^7.3.0",
         "prettier": "^2.2.1",
