--- a/packages/layout/items-stack/tsconfig.json
+++ b/packages/layout/items-stack/tsconfig.json
@@ -4,6 +4,6 @@
     "compilerOptions": {
         "outDir": "dist",
         "rootDir": ".",
-        "baseUrl": "."
+        "baseUrl": "./"
     }
 }
