--- a/package.json
+++ b/package.json
@@ -27,11 +27,6 @@
         "lint": "eslint packages --ext .js,.ts,.jsx,.tsx"
     },
     "dependencies": {
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "styled-components": "^5.2.0"
-    },
-    "devDependencies": {
         "@babel/core": "^7.11.6",
         "@changesets/cli": "^2.11.2",
         "@manypkg/cli": "^0.16.1",
@@ -61,9 +56,12 @@
         "loki": "^0.28.1",
         "looks-same": "^7.3.0",
         "prettier": "^2.2.1",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "react-is": "^17.0.1",
         "scripty": "^2.0.0",
         "source-map-loader": "^1.1.3",
+        "styled-components": "^5.2.0",
         "ts-loader": "^8.0.11",
         "typescript": "^4.0.3"
     },
