--- a/packages/components/header-headline/package.json
+++ b/packages/components/header-headline/package.json
@@ -1,5 +1,6 @@
 {
     "name": "header-headline",
     "version": "1.1.3",
-    "dependencies": {}
+    "dependencies": {},
+    "repository": "https://github.com/ArthurIvanov/atlantum/tree/master/packages/components/header-headline"
 }
