--- a/packages/components/input/package.json
+++ b/packages/components/input/package.json
@@ -7,8 +7,8 @@
     "types": "dist/index.d.ts",
     "license": "MIT",
     "dependencies": {
-        "@atlantum/theme": "^0.2.7",
-        "@atlantum/label": "^0.2.5"
+        "@atlantum/label": "^0.2.5",
+        "@atlantum/theme": "^0.2.7"
     },
     "devDependencies": {
         "react": "^16.13.1",
