--- a/packages/components/navigation-link/package.json
+++ b/packages/components/navigation-link/package.json
@@ -11,8 +11,8 @@
     },
     "devDependencies": {
         "react": "^16.13.1",
-        "styled-components": "^5.2.0",
-        "react-feather": "^2.0.8"
+        "react-feather": "^2.0.8",
+        "styled-components": "^5.2.0"
     },
     "peerDependencies": {
         "react": ">=16.8.0"
