--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,7 +52,7 @@
         { "path": "packages/components/button" },
         { "path": "packages/components/button-group" },
         { "path": "packages/components/button-icon" },
-        { "path": "packages/components/card" },
+        { "path": "packages/layout/card" },
         { "path": "packages/layout/group" },
         { "path": "packages/components/input" },
         { "path": "packages/components/image" },
