--- a/packages/components/alert/package.json
+++ b/packages/components/alert/package.json
@@ -7,7 +7,10 @@
     "types": "dist/index.d.ts",
     "license": "MIT",
     "dependencies": {
-        "@atlantum/theme": "^0.2.2"
+        "@atlantum/theme": "^0.2.2",
+        "@atlantum/icons": "^0.1.6",
+        "@atlantum/heading": "^0.2.3",
+        "@atlantum/items-stack": "^0.1.10"
     },
     "devDependencies": {
         "react": "^16.13.1",
