--- a/website/package.json
+++ b/website/package.json
@@ -1,34 +1,15 @@
 {
     "name": "website",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "private": true,
-    "description": "website",
-    "author": "Artur Ivanov",
-    "keywords": [
-        "gatsby"
-    ],
     "scripts": {
-        "develop": "gatsby develop",
-        "start": "gatsby develop",
-        "build": "gatsby build",
-        "serve": "gatsby serve",
-        "clean": "gatsby clean"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
     },
     "dependencies": {
-        "@atlantum/heading": "^0.2.3",
-        "@atlantum/theme": "^0.2.8",
-        "@mdx-js/mdx": "^1.6.22",
-        "@mdx-js/react": "^1.6.22",
-        "babel-plugin-styled-components": "^1.12.0",
-        "gatsby": "^3.2.1",
-        "gatsby-plugin-gatsby-cloud": "^2.2.0",
-        "gatsby-plugin-mdx": "^2.2.0",
-        "gatsby-plugin-react-helmet": "^4.2.0",
-        "gatsby-plugin-styled-components": "^4.2.0",
-        "gatsby-source-filesystem": "^3.2.0",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-helmet": "^6.1.0",
-        "styled-components": "^5.2.3"
+        "next": "10.1.3",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
     }
 }
