updated component structure

--- a/packages/components/checkbox/tsconfig.json
+++ b/packages/components/checkbox/tsconfig.json
@@ -6,10 +6,5 @@
         "outDir": "dist"
     },
     "include": ["src"],
-    "files": [],
-    "references": [
-        { "path": "../../theme" },
-        { "path": "../text-input" },
-        { "path": "../label" }
-    ]
+    "files": []
 }
