--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "workspaces": [
         "packages/components/*",
         "packages/layout/*",
-        "packages/theme",
+        "packages/theme/*",
         "packages/typography/*",
-        "packages/common/types",
-        "packages/tokens"
+        "packages/common/types"
     ],
     "scripts": {
         "dev": "yarn tsc --watch --preserveWatchOutput",
