--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -1,10 +1,10 @@
 {
-    "include": ["*.tsx", "*.ts"],
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "outDir": "dist",
-        "rootDir": ".",
-        "baseUrl": "."
+        "baseUrl": ".",
+        "rootDir": "src",
+        "outDir": "dist"
     },
-    "references": [{ "path": "../tokens" }]
+    "include": ["src"],
+    "files": []
 }
