--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -8,9 +8,20 @@
     "license": "MIT",
     "dependencies": {
         "@atlantum/accordion": "^0.3.0",
-        "@atlantum/input": "^0.2.7",
+        "@atlantum/alert": "^0.3.3",
+        "@atlantum/badge": "^0.3.0",
         "@atlantum/button": "^0.4.0",
+        "@atlantum/card": "^0.5.0",
+        "@atlantum/checkbox": "^0.3.0",
+        "@atlantum/column": "^0.3.0",
+        "@atlantum/container": "^0.3.0",
+        "@atlantum/content": "^0.3.0",
+        "@atlantum/grid": "^0.3.0",
+        "@atlantum/group": "^0.4.0",
+        "@atlantum/icons": "^0.3.0",
+        "@atlantum/items-stack": "^0.2.0",
         "@atlantum/label": "^0.2.6",
+        "@atlantum/text-input": "^0.2.0",
         "@atlantum/theme": "^0.2.8"
     },
     "devDependencies": {
@@ -20,5 +31,5 @@
     "peerDependencies": {
         "react": ">=16.8.0"
     },
-    "repository": "https://github.com/ArthurIvanov/atlantum/tree/master/packages/components/datepicker"
+    "repository": "https://github.com/ArthurIvanov/atlantum/tree/master/packages/components/core"
 }
