--- a/packages/badge/tsconfig.json
+++ b/packages/badge/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "baseUrl": "./",
+        "composite": true,
+        "outDir": "dist",
         "rootDir": "src",
-        "outDir": "dist"
+        "jsx": "react"
     },
-    "include": ["src"],
-    "files": []
+    "include": ["src"]
 }
