--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,14 +33,7 @@
         }
     },
     "files": [],
-    "exclude": [
-        "node_modules",
-        "dist",
-        "lib",
-        "__tests__",
-        "**/*.test*",
-        "**/*.spec*"
-    ],
+    "exclude": ["node_modules", "lib", "__tests__", "**/*.test*", "**/*.spec*"],
 
     "references": [
         //COMPONENTS
