--- a/package.json
+++ b/package.json
@@ -6,15 +6,11 @@
     "private": true,
     "repository": "https://github.com/ArthurIvanov/atlantum",
     "workspaces": [
-        "packages/*",
-        "packages/layout/*",
-        "packages/theme/*",
-        "packages/typography/*",
-        "packages/common/types/*"
+        "packages/*"
     ],
     "scripts": {
         "dev": "yarn tsc --watch --preserveWatchOutput",
-        "build": "tsc --build",
+        "build": "tsc -b .",
         "story": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
         "test": "jest",
@@ -67,5 +63,6 @@
     "volta": {
         "node": "14.16.0",
         "yarn": "1.22.10"
-    }
+    },
+    "devDependencies": {}
 }
