--- a/packages/alert/package.json
+++ b/packages/alert/package.json
@@ -6,6 +6,9 @@
     "module": "dist/index.js",
     "types": "dist/index.d.ts",
     "license": "MIT",
+    "files": [
+        "dist"
+    ],
     "dependencies": {
         "@atlantum/heading": "^0.3.1",
         "@atlantum/icons": "^0.3.0",
