--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -6,6 +6,9 @@
     "module": "dist/index.js",
     "types": "dist/index.d.ts",
     "license": "MIT",
+    "files": [
+        "dist"
+    ],
     "dependencies": {
         "@atlantum/theme": "^0.2.8"
     },
