--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,17 +43,17 @@
         { "path": "packages/icons" },
         { "path": "packages/image" },
         { "path": "packages/label" },
-        //        { "path": "packages/radio" },
-        //        { "path": "packages/select" },
-        //        { "path": "packages/table" },
+        { "path": "packages/radio" },
+        { "path": "packages/select" },
+        { "path": "packages/table" },
         { "path": "packages/types" },
         { "path": "packages/text-input" },
         { "path": "packages/text-link" },
-        //        { "path": "packages/toggle" },
+        { "path": "packages/toggle" },
         // LAYOUT
-        //        { "path": "packages/layout/card" },
-        //        { "path": "packages/layout/group" },
-        //        { "path": "packages/layout/grid" },
+        { "path": "packages/card" },
+        { "path": "packages/group" },
+        { "path": "packages/grid" },
         { "path": "packages/items-stack" },
         { "path": "packages/content" },
         { "path": "packages/column" },
