--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,7 @@
         { "path": "packages/alert" },
         { "path": "packages/badge" },
         { "path": "packages/button" },
+        { "path": "packages/datepicker" },
         { "path": "packages/icons" },
         { "path": "packages/image" },
         { "path": "packages/label" },
