--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
         //COMPONENTS
         { "path": "packages/accordion" },
         { "path": "packages/alert" },
+        { "path": "packages/avatar" },
         { "path": "packages/badge" },
         { "path": "packages/button" },
         { "path": "packages/datepicker" },
