Initialized tab component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,6 +49,7 @@
         { "path": "packages/navigation-link" },
         { "path": "packages/radio" },
         { "path": "packages/select" },
+        { "path": "packages/tabs" },
         { "path": "packages/table" },
         { "path": "packages/types" },
         { "path": "packages/text-input" },
