--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,6 +49,7 @@
         { "path": "packages/navigation-link" },
         { "path": "packages/radio" },
         { "path": "packages/select" },
+        { "path": "packages/spinner" },
         { "path": "packages/tabs" },
         { "path": "packages/tag" },
         { "path": "packages/table" },
