--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "@atlantum/accordion": "^1.1.2",
         "@atlantum/alert": "^1.0.4",
+        "@atlantum/avatar": "^0.0.4",
         "@atlantum/badge": "^1.1.2",
         "@atlantum/button": "^1.1.3",
         "@atlantum/card": "^0.6.2",
@@ -17,19 +18,24 @@
         "@atlantum/container": "^0.3.4",
         "@atlantum/content": "^0.3.7",
         "@atlantum/datepicker": "^0.3.2",
+        "@atlantum/divider": "^0.0.4",
         "@atlantum/grid": "^0.3.3",
         "@atlantum/group": "^0.4.2",
         "@atlantum/icons": "^0.4.1",
-        "@atlantum/image": "0.2.4",
+        "@atlantum/image": "^0.2.4",
         "@atlantum/items-stack": "^0.3.2",
         "@atlantum/label": "^0.3.2",
         "@atlantum/radio": "0.2.8",
         "@atlantum/select": "0.3.2",
+        "@atlantum/spinner": "^0.1.0",
         "@atlantum/table": "0.1.11",
         "@atlantum/text-input": "^0.2.3",
         "@atlantum/text-link": "0.5.2",
         "@atlantum/theme": "^0.3.0",
-        "@atlantum/toggle": "0.2.8"
+        "@atlantum/toggle": "0.2.8",
+        "@atlantum/heading": "^0.3.4",
+        "@atlantum/text": "^0.3.4",
+        "@atlantum/types": "^0.3.1"
     },
     "devDependencies": {
         "react": "^16.13.1",
