--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
         "clean": "gatsby clean"
     },
     "dependencies": {
+        "@atlantum/core": "^0.3.13",
         "@mdx-js/mdx": "^1.6.22",
         "@mdx-js/react": "^1.6.22",
         "babel-plugin-styled-components": "^1.12.0",
