--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,7 @@
         { "path": "packages/avatar" },
         { "path": "packages/badge" },
         { "path": "packages/button" },
+        { "path": "packages/checkbox" },
         { "path": "packages/datepicker" },
         { "path": "packages/divider" },
         { "path": "packages/icons" },
