--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,7 @@
         { "path": "packages/badge" },
         { "path": "packages/button" },
         { "path": "packages/checkbox" },
+        { "path": "packages/code" },
         { "path": "packages/datepicker" },
         { "path": "packages/divider" },
         { "path": "packages/icons" },
